<resources>
    <string name="app_name">BMI Calculator Pro</string>
    <string name="label_weight">Weight</string>
    <string name="hint_weight">kg</string>
    <string name="label_height">Height</string>
    <string name="hint_height">cm</string>
    <string name="label_calculate">Calculate</string>
    <string name="label_calculate_another">Calculate new BMI</string>
    <string name="bmi_result">Your Body Mass Index is:</string>
    <string name="title_activity_result">BMI Result</string>
    <string name="error_weight_empty">Please enter weight.</string>
    <string name="error_weight_invalid">The entered weight is invalid.</string>
    <string name="error_height_empty">Please enter height.</string>
    <string name="error_height_invalid">The entered height is invalid.</string>
    <string name="title_activity_history">History</string>
    <string name="label_history">History</string>
</resources>
